Fix what the audit found, and check each of it
Every file in the mod read once and asked four questions. 49 files, 11803
lines, 15 findings. The ledger and the reasoning are in research; this is what
was done about it.

Reading an asset file was quadratic. ValidationListener built each one by
reducing its lines with string concatenation, which allocates a fresh string
per line and copies everything before it. Measured on the 132 KB, 5268 line
palette this project's own stress pack writes, output verified identical: 56ms
against 1ms. It runs once per Lost Cities asset on every datapack load. Nothing
had noticed because the largest asset Lost Cities ships is 10 KB, where it is
invisible.

Conditions had no asset check at all, and Conditions.entriesOf was already
leaning on one. It turns an unreadable factor into 1.0 and an unreadable value
into the empty string, with a comment saying the entry is still there. Every
other silent skip in the codebase names what reports it instead. For conditions
nothing did, so /lcdev condition printed a share worked out from a number
nobody wrote. Eleven rules now, with the key list read out of the ConditionPart
codec rather than guessed, and verified silent on all three conditions Lost
Cities ships.

Sync.strayKeys caught its own example only at the top level. It exists because
a mistyped key is an error nowhere, and it read the settings object once and
stepped over the scope containers, so a mistyped field inside a chunk was as
silent as it had ever been. It now walks every depth, and checks the scope keys
too: resolve looks a chunk up by the exact string dx, comma, dz, so a key with
a space in it never matched and the plot's own value was used quietly. Which
scopes are checked narrows with depth, which was a review finding on the first
version of this fix.

A failed backup could name a warning as its cause. Wipe quoted the first
finding, and that list carries the asset check's warnings in discovery order,
so a pack that warned befor